mpn_conf_data.set('HAVE_CALLING_CONVENTIONS', 1)

endianness = host_machine.endian().to_upper()
mpn_conf_data.set('HAVE_DOUBLE_IEEE_' + endianness + '_ENDIAN', 1)
mpn_conf_data.set('HAVE_LIMB_' + endianness + '_ENDIAN', 1)

mpn_hdr_map += {
    'gmp-mparam.h': files('gmp-mparam.h.in'),
    'longlong_inc.h': files('longlong_inc.h.in')
}

# Some sources define a function which might get replaced at compile time by a
# native version, those go in the dictionary below. Regular sources go here.
mpn_src = [
    files('mp_bases.c'),
    files('comb_tables.c'),
    files('fib_table.c')
]

mpn_src_map = {
    'add': files('add.c'),
    'add_1': files('add_1.c'),
    'add_err1_n': files('add_err1_n.c'),
    'add_err2_n': files('add_err2_n.c'),
    'add_n': files('add_n.c'),
    'addadd_n': files('addadd_n.c'),
    'addmul_1': files('addmul_1.c'),
    'addsub_n': files('addsub_n.c'),
    'and_n': files('and_n.c'),
    'andn_n': files('andn_n.c'),
    'bdivmod': files('bdivmod.c'),
    'binvert': files('binvert.c'),
    'binvert_itch': files('binvert.c'),
    'cmp': files('cmp.c'),
    'com_n': files('com_n.c'),
    'copyd': files('copyd.c'),
    'copyi': files('copyi.c'),
    'dc_bdiv_q': files('dc_bdiv_q.c'),
    'dc_bdiv_q_n': files('dc_bdiv_q_n.c'),
    'dc_bdiv_qr': files('dc_bdiv_qr.c'),
    'dc_bdiv_qr_n': files('dc_bdiv_qr_n.c'),
    'dc_div_q': files('dc_div_q.c'),
    'dc_div_qr': files('dc_div_qr.c'),
    'dc_div_qr_n': files('dc_div_qr_n.c'),
    'dc_divappr_q': files('dc_divappr_q.c'),
    'divexact': files('divexact.c'),
    'divexact_1': files('divexact_1.c'),
    'divexact_by3c': files('divexact_by3c.c'),
    'divexact_byff': files('divexact_byff.c'),
    'divexact_byfobm1': files('divexact_byfobm1.c'),
    'divisible_p': files('divisible_p.c'),
    'divrem': files('divrem.c'),
    'divrem_1': files('divrem_1.c'),
    'divrem_2': files('divrem_2.c'),
    'divrem_euclidean_qr_1': files('divrem_euclidean_qr_1.c'),
    'divrem_euclidean_qr_2': files('divrem_euclidean_qr_2.c'),
    'divrem_euclidean_r_1': files('divrem_euclidean_r_1.c'),
    'mod_1_k': files('divrem_euclidean_r_1.c'),
    'divrem_hensel_qr_1': files('divrem_hensel_qr_1.c'),
    'divrem_hensel_qr_1_1': files('divrem_hensel_qr_1_1.c'),
    'divrem_hensel_qr_1_2': files('divrem_hensel_qr_1_2.c'),
    'divrem_hensel_r_1': files('divrem_hensel_r_1.c'),
    'divrem_hensel_rsh_qr_1': files('divrem_hensel_rsh_qr_1.c'),
    'divrem_hensel_rsh_qr_1_preinv': files('divrem_hensel_rsh_qr_1.c'),
    'dump': files('dump.c'),
    'fib2_ui': files('fib2_ui.c'),
    'gcd': files('gcd.c'),
    'gcd_1': files('gcd_1.c'),
    'gcd_subdiv_step': files('gcd_subdiv_step.c'),
    'gcdext': files('gcdext.c'),
    'gcdext_1': files('gcdext_1.c'),
    'gcdext_hook': files('gcdext_lehmer.c'),
    'gcdext_lehmer_n': files('gcdext_lehmer.c'),
    'get_d': files('get_d.c'),
    'get_str': files('get_str.c'),
    'hamdist': files('hamdist.c'),
    'hgcd': files('hgcd.c'),
    'hgcd_itch': files('hgcd.c'),
    'hgcd2': files('hgcd2.c'),
    'hgcd2_jacobi': files('hgcd2_jacobi.c'),
    'hgcd_appr': files('hgcd_appr.c'),
    'hgcd_appr_itch': files('hgcd_appr.c'),
    'hgcd_jacobi': files('hgcd_jacobi.c'),
    'hgcd_matrix_adjust': files('hgcd_matrix.c'),
    'hgcd_matrix_init': files('hgcd_matrix.c'),
    'hgcd_matrix_mul': files('hgcd_matrix.c'),
    'hgcd_matrix_mul_1': files('hgcd_matrix.c'),
    'hgcd_matrix_update_q': files('hgcd_matrix.c'),
    'hgcd_mul_matrix1_vector': files('hgcd_matrix.c'),
    'hgcd_reduce': files('hgcd_reduce.c'),
    'hgcd_reduce_itch': files('hgcd_reduce.c'),
    'hgcd_step': files('hgcd_step.c'),
    'inv_div_q': files('inv_div_q.c'),
    'inv_div_qr': files('inv_div_qr.c'),
    'inv_div_qr_n': files('inv_div_qr_n.c'),
    'inv_divappr_q': files('inv_divappr_q.c'),
    'inv_divappr_q_n': files('inv_divappr_q_n.c'),
    'invert': files('invert.c'),
    'invert_trunc': files('invert.c'),
    'is_invert': files('invert.c'),
    'ior_n': files('ior_n.c'),
    'iorn_n': files('iorn_n.c'),
    'jacobi_n': files('jacobi.c'),
    'jacobi_2': files('jacobi_2.c'),
    'jacobi_base': files('jacobi_base.c'),
    'lshift': files('lshift.c'),
    'matrix22_mul': files('matrix22_mul.c'),
    'matrix22_mul_itch': files('matrix22_mul.c'),
    'matrix22_mul_strassen': files('matrix22_mul.c'),
    'matrix22_mul1_inverse_vector': files('matrix22_mul1_inverse_vector.c'),
    'mod_1': files('mod_1.c'),
    'mod_1_1': files('mod_1_1.c'),
    'mod_1_2': files('mod_1_2.c'),
    'mod_1_3': files('mod_1_3.c'),
    'mod_34lsub1': files('mod_34lsub1.c'),
    'modexact_1c_odd': files('modexact_1c_odd.c'),
    'mul': files('mul.c'),
    'mul_1': files('mul_1.c'),
    'mul_basecase': files('mul_basecase.c'),
    'mul_fft': files('mul_fft.c'),
    'kara_mul_n': files('mul_n.c'),
    'kara_sqr_n': files('mul_n.c'),
    'mul_n': files('mul_n.c'),
    'sqr': files('mul_n.c'),
    'mulhigh_n': files('mulhigh_n.c'),
    'mullow_basecase': files('mullow_basecase.c'),
    'mullow_n': files('mullow_n.c'),
    'mullow_n_basecase': files('mullow_n_basecase.c'),
    'mulmid': files('mulmid.c'),
    'mulmid_basecase': files('mulmid_basecase.c'),
    'mulmid_n': files('mulmid_n.c'),
    'mulmod_2expm1': files('mulmod_2expm1.c'),
    'mulmod_bnm1': files('mulmod_2expm1.c'),
    'mulmod_2expp1_basecase': files('mulmod_2expp1_basecase.c'),
    'mulmod_Bexpp1': files('mulmod_bexpp1.c'),
    'nand_n': files('nand_n.c'),
    'neg_n': files('neg_n.c'),
    'nior_n': files('nior_n.c'),
    'nsumdiff_n': files('nsumdiff_n.c'),
    'perfect_square_p': files('perfect_square_p.c'),
    'popcount': files('popcount.c'),
    'pow_1': files('pow_1.c'),
    'powlo': files('powlo.c'),
    'powm': files('powm.c'),
    'preinv_divrem_1': files('preinv_divrem_1.c'),
    'preinv_mod_1': files('preinv_mod_1.c'),
    'random': files('random.c'),
    'random2': files('random2.c'),
    'randomb': files('randomb.c'),
    'redc_1': files('redc_1.c'),
    'addmul_2': files('redc_2.c'),
    'redc_2': files('redc_2.c'),
    'redc_n': files('redc_n.c'),
    'rootrem': files('rootrem.c'),
    'rootrem_basecase': files('rootrem_basecase.c'),
    'rrandom': files('rrandom.c'),
    'rsh_divrem_hensel_qr_1': files('rsh_divrem_hensel_qr_1.c'),
    'rsh_divrem_hensel_qr_1_1': files('rsh_divrem_hensel_qr_1_1.c'),
    'rsh_divrem_hensel_qr_1_2': files('rsh_divrem_hensel_qr_1_2.c'),
    'rshift': files('rshift.c'),
    'sb_bdiv_q': files('sb_bdiv_q.c'),
    'sb_bdiv_qr': files('sb_bdiv_qr.c'),
    'sb_div_q': files('sb_div_q.c'),
    'sb_div_qr': files('sb_div_qr.c'),
    'sb_divappr_q': files('sb_divappr_q.c'),
    'scan0': files('scan0.c'),
    'scan1': files('scan1.c'),
    'bc_set_str': files('set_str.c'),
    'dc_set_str': files('set_str.c'),
    'set_str': files('set_str.c'),
    'set_str_compute_powtab': files('set_str.c'),
    'sizeinbase': files('sizeinbase.c'),
    'sqr_basecase': files('sqr_basecase.c'),
    'sqrtrem': files('sqrtrem.c'),
    'sub': files('sub.c'),
    'sub_1': files('sub_1.c'),
    'sub_err1_n': files('sub_err1_n.c'),
    'sub_err2_n': files('sub_err2_n.c'),
    'sub_n': files('sub_n.c'),
    'subadd_n': files('subadd_n.c'),
    'submul_1': files('submul_1.c'),
    'sumdiff_n': files('sumdiff_n.c'),
    'tdiv_q': files('tdiv_q.c'),
    'tdiv_qr': files('tdiv_qr.c'),
    'toom32_mul': files('toom3_mul.c'),
    'toom3_interpolate': files('toom3_mul.c'),
    'toom3_mul': files('toom3_mul.c'),
    'toom42_mul': files('toom3_mul.c'),
    'toom3_mul_n': files('toom3_mul_n.c'),
    'toom3_sqr_n': files('toom3_mul_n.c'),
    'toom42_mulmid': files('toom42_mulmid.c'),
    'toom4_mul': files('toom4_mul.c'),
    'toom53_mul': files('toom4_mul.c'),
    'toom4_interpolate': files('toom4_mul_n.c'),
    'toom4_mul_n': files('toom4_mul_n.c'),
    'toom4_sqr_n': files('toom4_mul_n.c'),
    'toom8_sqr_n': files('toom8_sqr_n.c'),
    'toom8h_mul': files('toom8h_mul.c'),
    'toom_couple_handling': files('toom_couple_handling.c'),
    'toom_eval_dgr3_pm1': files('toom_eval_dgr3_pm1.c'),
    'toom_eval_dgr3_pm2': files('toom_eval_dgr3_pm2.c'),
    'toom_eval_pm1': files('toom_eval_pm1.c'),
    'toom_eval_pm2': files('toom_eval_pm2.c'),
    'toom_eval_pm2exp': files('toom_eval_pm2exp.c'),
    'toom_eval_pm2rexp': files('toom_eval_pm2rexp.c'),
    'toom_interpolate_16pts': files('toom_interpolate_16pts.c'),
    # 'udiv_w_sdiv': files('udiv_w_sdiv.c'),
    'urandomb': files('urandomb.c'),
    'urandomm': files('urandomm.c'),
    'xnor_n': files('xnor_n.c'),
    'xor_n': files('xor_n.c'),
    'zero': files('zero.c'),
    'zero_p': files('zero_p.c'),
}
