mpz_test_src = [
    'cxx/t-assign.cc',
    'cxx/t-binary.cc',
    'cxx/t-cast.cc',
    'cxx/t-constr.cc',
    'cxx/t-headers.cc',
    'cxx/t-istream.cc',
    'cxx/t-locale.cc',
    'cxx/t-misc.cc',
    'cxx/t-ops.cc',
    'cxx/t-ostream.cc',
    'cxx/t-prec.cc',
    'cxx/t-rand.cc',
    'cxx/t-ternary.cc',
    'cxx/t-unary.cc'
]
