mpf_test_src = [
    'mpf/t-add.c',
    'mpf/t-cmp_d.c',
    'mpf/t-cmp_si.c',
    'mpf/t-conv.c',
    'mpf/t-div.c',
    'mpf/t-dm2exp.c',
    'mpf/t-eq.c',
    'mpf/t-fits.c',
    'mpf/t-get_d.c',
    'mpf/t-get_d_2exp.c',
    'mpf/t-get_si.c',
    'mpf/t-get_ui.c',
    'mpf/t-gsprec.c',
    'mpf/t-inp_str.c',
    'mpf/t-int_p.c',
    'mpf/t-mul_ui.c',
    'mpf/t-muldiv.c',
    'mpf/t-set.c',
    'mpf/t-set_q.c',
    'mpf/t-set_si.c',
    'mpf/t-set_ui.c',
    'mpf/t-sqrt.c',
    'mpf/t-sqrt_ui.c',
    'mpf/t-sub.c',
    'mpf/t-trunc.c',
    'mpf/t-ui_div.c'
]
