mpn_test_src = [
    'mpn/t-addadd_n.c',
    'mpn/t-addsub_n.c',
    'mpn/t-aors_1.c',
    'mpn/t-asmtype.c',
    'mpn/t-dc_bdiv_q.c',
    'mpn/t-dc_bdiv_q_n.c',
    'mpn/t-dc_bdiv_qr.c',
    'mpn/t-dc_bdiv_qr_n.c',
    'mpn/t-dc_div_q.c',
    'mpn/t-dc_div_qr.c',
    'mpn/t-dc_div_qr_n.c',
    'mpn/t-dc_divappr_q.c',
    'mpn/t-divebyff.c',
    'mpn/t-divebyfobm1.c',
    'mpn/t-divrem_1.c',
    'mpn/t-fat.c',
    'mpn/t-gcdext.c',
    'mpn/t-get_d.c',
    'mpn/t-hgcd.c',
    'mpn/t-instrument.c',
    'mpn/t-inv_div_q.c',
    'mpn/t-inv_div_qr.c',
    'mpn/t-inv_div_qr_n.c',
    'mpn/t-inv_divappr_q.c',
    'mpn/t-inv_divappr_q_n.c',
    'mpn/t-invert.c',
    'mpn/t-iord_u.c',
    'mpn/t-logic.c',
    'mpn/t-lorrshift1.c',
    'mpn/t-matrix22.c',
    'mpn/t-mp_bases.c',
    'mpn/t-mullow_basecase.c',
    'mpn/t-mullowhigh.c',
    'mpn/t-mulmid.c',
    'mpn/t-mulmod_2expm1.c',
    'mpn/t-mulmod_2expp1.c',
    'mpn/t-neg.c',
    'mpn/t-perfsqr.c',
    'mpn/t-redc_1.c',
    'mpn/t-sb_bdiv_q.c',
    'mpn/t-sb_bdiv_qr.c',
    'mpn/t-sb_div_q.c',
    'mpn/t-sb_div_qr.c',
    'mpn/t-sb_divappr_q.c',
    'mpn/t-scan.c',
    'mpn/t-sizeinbase.c',
    'mpn/t-subadd_n.c',
    'mpn/t-tdiv_q.c',
    'mpn/t-tdiv_qr.c'
]
