mpz_test_src = [
    'mpz/bit.c',
    'mpz/convert.c',
    'mpz/dive.c',
    'mpz/dive_ui.c',
    'mpz/io.c',
    'mpz/logic.c',
    'mpz/reuse.c',
    'mpz/t-addsub.c',
    'mpz/t-aorsmul.c',
    'mpz/t-bin.c',
    'mpz/t-cdiv_ui.c',
    'mpz/t-cmp.c',
    'mpz/t-cmp_d.c',
    'mpz/t-cmp_si.c',
    'mpz/t-cong.c',
    'mpz/t-cong_2exp.c',
    'mpz/t-div_2exp.c',
    'mpz/t-divis.c',
    'mpz/t-divis_2exp.c',
    'mpz/t-export.c',
    'mpz/t-fac_ui.c',
    'mpz/t-fdiv.c',
    'mpz/t-fdiv_ui.c',
    'mpz/t-fib_ui.c',
    'mpz/t-fits.c',
    'mpz/t-gcd.c',
    'mpz/t-gcd_ui.c',
    'mpz/t-get_d.c',
    'mpz/t-get_d_2exp.c',
    'mpz/t-get_si.c',
    'mpz/t-get_sx.c',
    'mpz/t-get_ux.c',
    'mpz/t-hamdist.c',
    'mpz/t-import.c',
    'mpz/t-inp_str.c',
    'mpz/t-io_raw.c',
    'mpz/t-jac.c',
    'mpz/t-lcm.c',
    'mpz/t-limbs.c',
    'mpz/t-likely_prime_p.c',
    'mpz/t-lucnum_ui.c',
    'mpz/t-mfac_uiui.c',
    'mpz/t-mul.c',
    'mpz/t-mul_i.c',
    'mpz/t-next_prime_candidate.c',
    'mpz/t-oddeven.c',
    'mpz/t-perfpow.c',
    'mpz/t-perfsqr.c',
    'mpz/t-popcount.c',
    'mpz/t-pow.c',
    'mpz/t-powm.c',
    'mpz/t-powm_ui.c',
    'mpz/t-pprime_p.c',
    'mpz/t-primorial_ui.c',
    'mpz/t-root.c',
    'mpz/t-scan.c',
    'mpz/t-set_d.c',
    'mpz/t-set_f.c',
    'mpz/t-set_si.c',
    'mpz/t-set_str.c',
    'mpz/t-set_sx.c',
    'mpz/t-set_ux.c',
    'mpz/t-sizeinbase.c',
    'mpz/t-sqrtrem.c',
    'mpz/t-tdiv.c',
    'mpz/t-tdiv_ui.c',
    'mpz/t-trial_division.c'
]
