if 'atom' in arch_set
    mpn_hdr_map += {
        'gmp-mparam.h': 'mpn/x86_64/atom/gmp-mparam.h.in',
    }

    mpn_src_map += {
        'sub_n': 'mpn/x86_64/atom/sub_n.as',
        'and_n': 'mpn/x86_64/atom/and_n.as',
        'lshift': 'mpn/x86_64/atom/lshift.as',
        'xnor_n': 'mpn/x86_64/atom/xnor_n.as',
        'redc_1': 'mpn/x86_64/atom/redc_1.as',
        'mul_1': 'mpn/x86_64/atom/mul_1.as',
        'sqr_basecase': 'mpn/x86_64/atom/sqr_basecase.as',
        'rsh1sub_n': 'mpn/x86_64/atom/rsh1sub_n.as',
        'divexact_byff': 'mpn/x86_64/atom/divexact_byff.as',
        'divrem_hensel_qr_1_1': 'mpn/x86_64/atom/divrem_hensel_qr_1_1.asm',
        'xor_n': 'mpn/x86_64/atom/xor_n.as',
        'addmul_2': 'mpn/x86_64/atom/addmul_2.as',
        'nand_n': 'mpn/x86_64/atom/nand_n.as',
        'store': 'mpn/x86_64/atom/store.asm',
        'copyd': 'mpn/x86_64/atom/copyd.as',
        'rshift': 'mpn/x86_64/atom/rshift.as',
        'copyi': 'mpn/x86_64/atom/copyi.asm',
        'rsh_divrem_hensel_qr_1_1': 'mpn/x86_64/atom/rsh_divrem_hensel_qr_1_1.asm',
        'submul_1': 'mpn/x86_64/atom/submul_1.as',
        'nior_n': 'mpn/x86_64/atom/nior_n.as',
        'addlsh_n': 'mpn/x86_64/atom/addlsh_n.asm',
        'addmul_1': 'mpn/x86_64/atom/addmul_1.as',
        'addlsh1_n': 'mpn/x86_64/atom/addlsh1_n.as',
        'mod_1_3': 'mpn/x86_64/atom/mod_1_3.asm',
        'ior_n': 'mpn/x86_64/atom/ior_n.as',
        'iorn_n': 'mpn/x86_64/atom/iorn_n.as',
        'sublsh1_n': 'mpn/x86_64/atom/sublsh1_n.as',
        'mod_1_2': 'mpn/x86_64/atom/mod_1_2.asm',
        'andn_n': 'mpn/x86_64/atom/andn_n.as',
        'karaadd': 'mpn/x86_64/atom/karaadd.asm',
        'com_n': 'mpn/x86_64/atom/com_n.as',
        'lshift1': 'mpn/x86_64/atom/lshift1.as',
        'add_n': 'mpn/x86_64/atom/add_n.as',
        'mod_1_1': 'mpn/x86_64/atom/mod_1_1.asm',
        'sublsh_n': 'mpn/x86_64/atom/sublsh_n.asm',
        'mul_basecase': 'mpn/x86_64/atom/mul_basecase.as',
        'mul_2': 'mpn/x86_64/atom/mul_2.as',
        'karasub': 'mpn/x86_64/atom/karasub.asm',
        'rsh1add_n': 'mpn/x86_64/atom/rsh1add_n.as',
        'lshift2': 'mpn/x86_64/atom/lshift2.asm',
    }

endif
