message('    enabling native: atom')

mpn_hdr_map += {
    'gmp-mparam.h': 'mpn/x86_64/atom/gmp-mparam.h.in',
}

mpn_src_map += {        
    'addlsh1_n': 'mpn/x86_64/atom/addlsh1_n.as',
    'addlsh_n': 'mpn/x86_64/atom/addlsh_n.asm',
    'addlsh_nc': 'mpn/x86_64/atom/addlsh_n.asm',
    'addmul_1': 'mpn/x86_64/atom/addmul_1.as',
    'addmul_2': 'mpn/x86_64/atom/addmul_2.as',
    'add_n': 'mpn/x86_64/atom/add_n.as',
    'andn_n': 'mpn/x86_64/atom/andn_n.as',
    'and_n': 'mpn/x86_64/atom/and_n.as',
    'com_n': 'mpn/x86_64/atom/com_n.as',
    'copyd': 'mpn/x86_64/atom/copyd.as',
    'copyi': 'mpn/x86_64/atom/copyi.asm',
    'divexact_byff': 'mpn/x86_64/atom/divexact_byff.as',
    'divrem_hensel_qr_1_1': 'mpn/x86_64/atom/divrem_hensel_qr_1_1.asm',
    'iorn_n': 'mpn/x86_64/atom/iorn_n.as',
    'ior_n': 'mpn/x86_64/atom/ior_n.as',
    'karaadd': 'mpn/x86_64/atom/karaadd.asm',
    'karasub': 'mpn/x86_64/atom/karasub.asm',
    'lshift': 'mpn/x86_64/atom/lshift.as',
    'lshift1': 'mpn/x86_64/atom/lshift1.as',
    'lshift2': 'mpn/x86_64/atom/lshift2.asm',
    'mod_1_1': 'mpn/x86_64/atom/mod_1_1.asm',
    'mod_1_2': 'mpn/x86_64/atom/mod_1_2.asm',
    'mod_1_3': 'mpn/x86_64/atom/mod_1_3.asm',
    'mul_1': 'mpn/x86_64/atom/mul_1.as',
    'mul_2': 'mpn/x86_64/atom/mul_2.as',
    'mul_basecase': 'mpn/x86_64/atom/mul_basecase.as',
    'nand_n': 'mpn/x86_64/atom/nand_n.as',
    'nior_n': 'mpn/x86_64/atom/nior_n.as',
    'redc_1': 'mpn/x86_64/atom/redc_1.as',
    'rsh1add_n': 'mpn/x86_64/atom/rsh1add_n.as',
    'rsh1sub_n': 'mpn/x86_64/atom/rsh1sub_n.as',
    'rshift': 'mpn/x86_64/atom/rshift.as',
    'rsh_divrem_hensel_qr_1_1': 'mpn/x86_64/atom/rsh_divrem_hensel_qr_1_1.asm',
    'sqr_basecase': 'mpn/x86_64/atom/sqr_basecase.as',
    'store': 'mpn/x86_64/atom/store.asm',
    'sublsh1_n': 'mpn/x86_64/atom/sublsh1_n.as',
    'sublsh_n': 'mpn/x86_64/atom/sublsh_n.asm',
    'sublsh_nc': 'mpn/x86_64/atom/sublsh_n.asm',
    'submul_1': 'mpn/x86_64/atom/submul_1.as',
    'sub_n': 'mpn/x86_64/atom/sub_n.as',
    'xnor_n': 'mpn/x86_64/atom/xnor_n.as',
    'xor_n': 'mpn/x86_64/atom/xor_n.as',
}
